Add ESP32 HAL crate

--- a/variants/esp32/Cargo.toml
+++ b/variants/esp32/Cargo.toml
@@ -17,6 +17,7 @@ pio = ["esp-idf-sys/pio"]
 
 [dependencies]
 esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
+esp-idf-hal = "0.38.1"
 
 [build-dependencies]
 embuild = "0.29"
