--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,12 @@
 version: 2
 updates:
   - package-ecosystem: "cargo"
-    directory: "/"
+    directory: "/variants/esp32"
     schedule:
       interval: "daily"
       time: "06:00" # UTC
-    labels:
-      - "scope: pkg-deps"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore(cargo-deps)"
     open-pull-requests-limit: 10
 
   - package-ecosystem: "github-actions"
@@ -16,8 +14,6 @@ updates:
     schedule:
       interval: "daily"
       time: "06:00" # UTC
-    labels:
-      - "scope: ci-deps"
     commit-message:
-      prefix: "chore(ci)"
+      prefix: "chore(ci-deps)"
     open-pull-requests-limit: 10
