--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: "daily"
       time: "06:00" # UTC
     commit-message:
-      prefix: "chore(cargo-deps)"
+      prefix: "chore(deps)"
     open-pull-requests-limit: 10
 
   - package-ecosystem: "github-actions"
@@ -15,5 +15,5 @@ updates:
       interval: "daily"
       time: "06:00" # UTC
     commit-message:
-      prefix: "chore(ci-deps)"
+      prefix: "chore(deps)"
     open-pull-requests-limit: 10
