--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,9 @@
 version: 2
 updates:
   - package-ecosystem: "cargo"
-    directory: "/variants/esp32"
+    directory: "/"
     schedule:
-      interval: "daily"
-      time: "06:00" # UTC
+      interval: "weekly"
     commit-message:
       prefix: "chore(deps)"
     open-pull-requests-limit: 10
@@ -12,8 +11,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "06:00" # UTC
+      interval: "weekly"
     commit-message:
       prefix: "chore(deps)"
     open-pull-requests-limit: 10
