Update code derived from upstream esp-rs template
Signed-off-by: Dom Rodriguez <shymega@shymega.org.uk>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "morph-fw-rs-esp32"
+name = "morph-v1-esp32-fw-rs"
 version = "0.1.0"
 authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
 edition = "2021"
+resolver = "2"
 
 [profile.release]
 opt-level = "s"
@@ -12,13 +13,12 @@ debug = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
-default = ["pio"]
 pio = ["esp-idf-sys/pio"]
 
 [dependencies]
-esp-idf-sys = { version = "*", features = ["binstart"] }
-esp-idf-hal = "*"
+esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
+
 
 [build-dependencies]
-embuild = "*"
+embuild = "0.30.4"
 anyhow = "1"
