--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,18 +7,24 @@ target = "xtensa-esp32-espidf"
 
 [target.xtensa-esp32-espidf]
 linker = "ldproxy"
+runner = "espflash --monitor"
+#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [target.xtensa-esp32s2-espidf]
 linker = "ldproxy"
+runner = "espflash --monitor"
+#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [target.xtensa-esp32s3-espidf]
 linker = "ldproxy"
+runner = "espflash --monitor"
+#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [target.riscv32imc-esp-espidf]
 linker = "ldproxy"
-
-# Future - necessary for the experimental "native build" of esp-idf-sys with ESP32C3
-# See also https://github.com/ivmarkov/embuild/issues/16
+runner = "espflash --monitor"
+# Future - necessary for the experimental "native build" of esp-idf-sys with ESP32C3. See also https://github.com/ivmarkov/embuild/issues/16
+# For ESP-IDF 5 add `espidf_time64` and for earlier versions - remove this flag: https://github.com/esp-rs/rust/issues/110
 rustflags = ["-C", "default-linker-libraries"]
 
 [unstable]
@@ -27,8 +33,8 @@ build-std = ["std", "panic_abort"]
 #build-std-features = ["panic_immediate_abort"] # Required for older ESP-IDF versions without a realpath implementation
 
 [env]
-# Note: these variables are not used when using pio builder
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF stable (v4.4)
-ESP_IDF_VERSION = { value = "branch:release/v4.4" }
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF master (mainline)
-#ESP_IDF_VERSION = { value = "master" }
+# Note: these variables are not used when using pio builder (`cargo build --features pio`)
+# Builds against ESP-IDF stable (v4.4)
+ESP_IDF_VERSION = "release/v4.4"
+# Builds against ESP-IDF master (mainline)
+#ESP_IDF_VERSION = "master"
