--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,11 @@ wifi = []
 gui = []
 
 [dependencies]
-esp-idf-sys = { version = "0.31.12", features = ["binstart"] }
+esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
 esp-idf-hal = "0.40.1"
 esp-idf-svc = "0.45.0"
 anyhow = "1"
 
 [build-dependencies]
-embuild = "0.30.5"
+embuild = "0.31.0"
+anyhow = "1"
